--- a/frontend/src/components/ProviderDashboard/ProviderDashboard.css
+++ b/frontend/src/components/ProviderDashboard/ProviderDashboard.css
@@ -9,8 +9,10 @@
     padding: 10px;
     border: 1px solid grey;
     border-radius: 7px;
-    box-shadow: 5px 5px #888888;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
 }
 .ProviderDashboard div:hover{
-  background-color: #7d7d7d;
+    box-shadow: 0 4px 16px 0 rgba(0,0,0,0.2);
+
 }
