--- a/frontend/src/components/ProviderDashboard/ProviderDashboard.css
+++ b/frontend/src/components/ProviderDashboard/ProviderDashboard.css
@@ -20,15 +20,30 @@ body{
 
 }
 .side-bar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
     width:200px;
     height: 100vh;
     background-color: cadetblue;
+    padding-top: 25px;
 }
 .provider-pic{
-    margin-left: 15%;
+    /* margin-left: 15%; */
     width: 80px;
 background-color: rgb(255, 255, 255);
 border-radius: 50%;
+}
+.welcome{
+    font-size: 1.5em;
+}
+.logout{
+    color: red;
+    cursor: pointer;
+}
+.logout:hover{
+    color: black;
 }
 .MyOrder{
     margin-left: 15px;
