--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -6,6 +6,12 @@
     gap: 25px;
    
 }
+.inputs{
+    display: flex;
+    flex-direction: column;
+    gap:15px
+}
+
 .err{
     padding-top:3px;
     border-radius: 10px;
