--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -1,33 +1,37 @@
 
 .Register-page{
+    color: white;
     display: flex;
     flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    /* justify-content: center; */
     align-items: center;
+    text-align: center;
     gap: 25px;
-   
+ 
+	background: linear-gradient(to top,#281a44, #215464)  
 }
 .inputs{
     display: flex;
     flex-direction: column;
-    gap:15px
+    gap:15px;
+    width: 300px;
 }
+
 
 .err{
     padding-top:3px;
     border-radius: 10px;
-    align-self: center;
     height: 40px;
-    width: 300px;
     background-color: hsla(0, 100%, 50%, 0.402);
     color: white;
     text-align: center;
 }
 .succ{
     padding-top:3px;
-    align-self: center;
     border-radius: 10px;
     height: 40px;
-    width: 300px;
     background-color: rgb(78, 142, 78);
     color: black;
     text-align: center;
