--- a/frontend/src/components/ProviderDashboard/ProviderDashboard.css
+++ b/frontend/src/components/ProviderDashboard/ProviderDashboard.css
@@ -58,3 +58,18 @@ border-radius: 50%;
     box-shadow: 0 4px 16px 0 rgba(0,0,0,0.2);
 
 }
+.list{
+    position:absolute;
+    top: 7px;
+    margin-left: 15px;
+    border: 1px solid white;
+    border-radius: 7px;
+    padding: 5px;
+    fill:white;
+    cursor: pointer;
+}
+.list:hover{
+    fill: gray;
+    border: 1px solid gray;
+    border-radius: 10px;
+}
