--- a/frontend/src/components/ClientDashboard/ClientDashboard.css
+++ b/frontend/src/components/ClientDashboard/ClientDashboard.css
@@ -1,5 +1,8 @@
 .Services{
+    /* height: 100vh; */
+    margin-top: 5rem;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    /* background-color: rgb(47, 72, 72); */
 }
