--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     /* justify-content: center; */
     width: 100;
-    height: 100vh;
+    height: 100%;
     background-image: url("../images/home.jpg");
    background-repeat: no-repeat;
    background-size: cover;
@@ -23,4 +23,9 @@
 .item, img{
     height: 100% !important;
     width:  100% !important;
+}
+.cards{
+    display: flex;
+    justify-content: center ;
+    gap: 25px;
 }
