--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -6,7 +6,7 @@
     justify-content: center;
     text-align: center;
     gap: 25px;
-    background: linear-gradient(to top,#281a44, #215464)  
+    background: linear-gradient(to top,#7a797e, #215464);
 }
 .userLogo svg{
     width:75px ;
