--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,10 +1,12 @@
 .list{
+    position:static;
     margin-left: 15px;
     border: 1px solid white;
     border-radius: 7px;
     padding: 5px;
     fill:white;
     cursor: pointer;
+
 }
 .list:hover{
     fill: gray;
