--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,32 +1,27 @@
-.Home-Page{
-    gap:20px;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    width: 100;
-    height: 100%;
-    /* background-image: url("../images/home.jpg"); */
-   /* background-repeat: no-repeat; */
-   /* background-size: cover; */
-   background: linear-gradient(to top,#7a797e, #215464);
-   text-align: center;
-
+.Home-Page {
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100;
+  height: 100%;
+  background: linear-gradient(to top, #7a797e, #215464);
+  text-align: center;
 }
-.title{
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
-    font-size: 4em;
+.title {
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bolder;
+  font-size: 4em;
 }
-.carousel-inner{
-     height:75vh;
+.carousel-inner {
+  height: 75vh;
 }
 
-.item, img{
-    height: 100% !important;
-    width:  100% !important;
+.item,
+img {
+  height: 100% !important;
+  width: 100% !important;
 }
-.cards{
-    display: flex;
-    justify-content: space-evenly ;
-    /* gap: 25px; */
+.cards {
+  display: flex;
+  justify-content: space-evenly;
 }
